k8s/argocd/Nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nach-nodeport
  namespace: argocd
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: argocd-server
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30008
