k8s/argocd/IngressRule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata: 
  name: ingress-rule-argocd
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: ingress-class
  rules:
  - http:
      paths:
      - path: /argocd
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
